# Brainfuck

./: .gitignore  Brainfuck.hs  Interpreter.hs  Makefile  README.md  brainfuck.c
Brainfuck/: Naive.hs  NaiveInterpreter.hs  SamB.hs
C/: .gitignore  Makefile  README.md  bf.c
D/: Makefile
Haskell/: .gitignore  Brainfuck.cabal  LICENSE  README.md
Haskell/src/: Brainfuck.lhs  Brainfuck.lhs.htm  Brainfuck.lhs.html  Brainfuck.lhs.md
Java8/: pom.xml
Java8/src/main/java/de/scravy/java8/: Brainfuck.java  BrainfuckAST.java  BrainfuckFiniteVM.java  BrainfuckInfiniteVM.java  BrainfuckParser.java  BrainfuckScript.java  BrainfuckVM.java
_scripts/: fibonacci.bfx
c/: bf.c
scripts/: 99bottles.bf  fibonacci.bf
