name:                Brainfuck
version:             1.0
synopsis:            A Brainfuck Interpreter.
description:         A Brainfuck Interpreter written in Literate Haskell.
license:             PublicDomain
license-file:        LICENSE
author:              Julian Fleischer
maintainer:          julian.fleischer@warhog.net
category:            Development
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable Brainfuck
  main-is:             Brainfuck.lhs
  other-extensions:    Haskell2010, LambdaCase, NegativeLiterals, GADTs, RecordWildCards
  build-depends:       base >=4.7 && <4.8, nicify >=1.1 && <1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
