name:                Brainfuck
version:             1.0
synopsis:            A Brainfuck Interpreter.
description:         A Brainfuck Interpreter written in Literate Haskell.
license:             PublicDomain
license-file:        LICENSE
author:              Julian Fleischer
maintainer:          julian.fleischer@warhog.net
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable bf

    hs-source-dirs:     src
    main-is:            Brainfuck.lhs

    build-depends:      base >=4.7 && <4.8
                        , nicify >=1.1 && <1.2

    default-language:   Haskell2010
    default-extensions: LambdaCase, NegativeLiterals, RecordWildCards

    ghc-options:        -Wall -fno-warn-name-shadowing
